tests/errors/generic-enum-constructor-mismatch.ari
enum Option[T] {
  None,
  Some(T),
}

fn main() -> i64 {
  let value: Option[i64] = Some<bool>(true);
  return 0;
}
